--- a/mm-project-one/pom.xml
+++ b/mm-project-one/pom.xml
@@ -10,14 +10,6 @@
 	<artifactId>mm-project-one</artifactId>
 
 
-	<dependencies>
-		<dependency>
-			<groupId>com.test.project.setup</groupId>
-			<artifactId>mm-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>compile</scope>
-		</dependency>
-	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -35,4 +27,11 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>com.test.project.setup</groupId>
+			<artifactId>mm-core-main</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	</dependencies>
 </project>
